Fix footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ a[href]:hover {
   display: flex;
   justify-content: space-between;
   padding: var(--margin-small);
+  margin-top: -4rem;
 }
 
 @media (min-width: 40rem) {
